MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Reviewer_Cmt__mdt/Business_Process_Reviewer_Cmt__mdt.object-meta.xml
<CustomObject>
    <label>Business Process Reviewer Picklist</label>
    <pluralLabel>Business Process Reviewer Picklists</pluralLabel>
</CustomObject>