MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Reviewer_Cmt__mdt/fields/Business_Process_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Process_Type__c</fullName>
    <label>Business Process Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>