MODON MRE BPDEV/force-app/main/default/objects/Business_Process_Reviewer_Cmt__mdt/fields/Picklist_Options__c.field-meta.xml
<CustomField>
    <fullName>Picklist_Options__c</fullName>
    <description>semi column seperated picklist options</description>
    <label>Picklist Options</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>